[package]
name = "image-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chunked_transfer = "1.4.0"
httparse = "1.5.1"
image = "0.23.14"
num_cpus = "1.13.0"
webp = "0.2.0"

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
