[package]
name = "rustybucket"
description = "A custom built Rust API server to dynamically resize images based upon a URL query"
license = "AGPL-3.0"
repository = "https://github.com/mattcarlotta/image-api"
version = "1.0.1"
authors = ["Matt Carlotta <matt@mattcarlotta.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chunked_transfer = "1.4.0"
httparse = "1.5.1"
image = "0.23.14"
libwebp-sys = "0.4.0"
num_cpus = "1.13.0"

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }

